# open5gs

./: hosts  plan-interPlmnN2HandoverLbo.prompt.md
.github/prompts/: plan-fixInterPlmnN2HandoverDeficiencies.prompt.md  plan-fixInterPlmnN2HandoverHomeRouted.prompt.md  plan-interPlmnN2HandoverHomeRouted.prompt.md
configs/: meson.build  n2_handover.yaml.in
configs/examples/: 5gc-sepp1-999-70.yaml.in  5gc-sepp2-001-01.yaml.in  gnb-999-70-ue-001-01.yaml.in
docs/: interplmn-n2-handover-compliance-audit.md  interplmn-n2-handover-limitations.md  interplmn-n2-handover-pcap-verification.md
lib/metrics/: meson.build
lib/sbi/: message.c  message.h  ogs-sbi.h
misc/: netconf_custom.sh
scripts/: ho-extract-messages.sh  ho-pcap-to-csv.py  ho-sequence-diagram.sh  ho-timing.sh
src/amf/: amf-sm.c  context.c  context.h  gmm-sm.c  namf-build.c  namf-build.h  namf-handler.c  namf-handler.h  ngap-build.c  ngap-handler.c  nsmf-build.c  nsmf-handler.c  nsmf-handler.h  sbi-path.c  sbi-path.h
src/scp/: context.h  sbi-path.c
src/sepp/: sbi-path.c
src/smf/: context.h  gsm-sm.c  ngap-build.c  nsmf-build.c  nsmf-handler.c  nsmf-handler.h  sbi-path.c  sbi-path.h  smf-sm.c
tests/common/: context.c  context.h  ngap-build.c  ngap-build.h  ngap-handler.c  ngap-handler.h  sctp.c
tests/registration/: abts-main.c  meson.build  simple-roaming-test.c
tests/roaming/: abts-main-container.c  abts-main-generic.c  abts-main.c  dereg-roaming-test.c  meson.build  mobility-roaming-test.c  n2-handover-hr-container-test.c  n2-handover-hr-generic-test.c  n2-handover-hr-test.c  n2-handover-lbo-test.c  n2-handover-test.c  simple-roaming-test.c
